# fastapi-template

./: .pdm-python  .pre-commit-config.yaml  README.md  custom_logging.py  dependencies.py  logging_config.json  main.py  main_logger.py  pyproject.toml  requirements.txt
controllers/: security_v1.py  user_v1.py  users_v1.py
utils/: constants.py  contextvars.py  helpers.py
